--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,6 @@
   <title>亞馬烏羅提菜市場 Amaurot Market</title>
 </head>
 <body>
-  <div id="app"></div>
+  <div id="app" style="min-height: 100vh;"></div>
 </body>
 </html>
